...
                android:minHeight="?attr/actionBarSize"
                app:forceDefaultNavigationOnClickListener="true"
                app:navigationIcon="@drawable/pending_sessions_24"
                app:title="@string/fabSessionsTitle" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/sessionTabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabMode="fixed">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
...
                    android:text="@string/tabPrevious" />

            </com.google.android.material.tabs.TabLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSessionResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="12dp"
            app:layout_constraintTop_toBottomOf="@id/textField" />
    </LinearLayout>

...
