<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/NavBarSessions"
        android:enabled="true"
        android:icon="@drawable/pending_sessions_24"
        android:title="@string/NavBarStudentSessions" />
    <item
        android:id="@+id/NavBarProfile"
        android:enabled="true"
        android:icon="@drawable/ic_profile_24"
        android:title="@string/NavBarStudentProfile" />
    <item
        android:id="@+id/NavBarChats"
        android:enabled="true"
        android:icon="@drawable/ic_chat_24"
        android:title="@string/NavBarChats" />
</menu>