<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.booking.PaymentFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abTop"
        style="@style/Widget.App.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="8dp"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="@drawable/baseline_credit_card_24"
            app:title="@string/fabPaymentDetails" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="24dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilCardNumber"
                    style="@style/Widget.App.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tilCardNumberHint"
                    app:counterEnabled="true"
                    app:counterMaxLength="16"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilExpDate"
                        style="@style/Widget.App.TextInputLayout"
                        android:layout_width="128dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:hint="@string/tilExpDateHint"
                        app:counterEnabled="true"
                        app:counterMaxLength="4"
                        app:endIconMode="clear_text"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilCVC"
                        style="@style/Widget.App.TextInputLayout"
                        android:layout_width="128dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginStart="16dp"
                        android:hint="@string/tilCVCHint"
                        app:counterEnabled="true"
                        app:counterMaxLength="3"
                        app:endIconMode="clear_text"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <TextView
                    style="@style/TextAppearance.Material3.BodyLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="24dp"
                    android:text="@string/paymentMessage">

                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="24dp"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvTotal"
                        style="@style/TextAppearance.Material3.BodyLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:gravity="end"
                        android:text="@string/priceMessage">

                    </TextView>

                    <TextView
                        android:id="@+id/tvTotalField"
                        style="@style/TextAppearance.Material3.TitleLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/tvBookingSessionPriceField">

                    </TextView>
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginVertical="8dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelButton"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginHorizontal="8dp"
                android:text="@string/cancel" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/confirmButton"
                style="@style/Widget.Material3.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginHorizontal="8dp"
                android:text="@string/continueBooking" />

        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>
